--- a/BigData/lab4/iris.ipynb
+++ b/BigData/lab4/iris.ipynb
@@ -383,8 +383,7 @@
    ],
    "source": [
     "iris_dataframe = pd.DataFrame(X_train, columns=iris_dataset.feature_names)\n",
-    "grr = pd.plotting.scatter_matrix(iris_dataframe, c=y_train, figsize=(15, 15), marker='o', hist_kwds={'bins': 20}, s=60,\n",
-    "                                 alpha=.8)"
+    "grr = pd.plotting.scatter_matrix(iris_dataframe, c=y_train, figsize=(15, 15), marker='o', hist_kwds={'bins': 20}, s=60,alpha=.8)"
    ],
    "metadata": {
     "collapsed": false,
