--- a/BigData/lab5/load_diabetes.ipynb
+++ b/BigData/lab5/load_diabetes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 266,
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
@@ -19,22 +19,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:14.241065009Z",
-     "start_time": "2023-11-08T17:02:14.070279134Z"
+     "end_time": "2023-11-08T17:37:15.627965661Z",
+     "start_time": "2023-11-08T17:37:15.495948051Z"
     }
    },
    "id": "627a721c847a5889"
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 267,
    "outputs": [
     {
      "data": {
       "text/plain": "        age       sex       bmi        bp        s1        s2        s3  \\\n0  0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n1 -0.001882 -0.044642 -0.051474 -0.026328 -0.008449 -0.019163  0.074412   \n2  0.085299  0.050680  0.044451 -0.005670 -0.045599 -0.034194 -0.032356   \n3 -0.089063 -0.044642 -0.011595 -0.036656  0.012191  0.024991 -0.036038   \n4  0.005383 -0.044642 -0.036385  0.021872  0.003935  0.015596  0.008142   \n5 -0.092695 -0.044642 -0.040696 -0.019442 -0.068991 -0.079288  0.041277   \n6 -0.045472  0.050680 -0.047163 -0.015999 -0.040096 -0.024800  0.000779   \n7  0.063504  0.050680 -0.001895  0.066629  0.090620  0.108914  0.022869   \n8  0.041708  0.050680  0.061696 -0.040099 -0.013953  0.006202 -0.028674   \n9 -0.070900 -0.044642  0.039062 -0.033213 -0.012577 -0.034508 -0.024993   \n\n         s4        s5        s6    tmp  \n0 -0.002592  0.019907 -0.017646  151.0  \n1 -0.039493 -0.068332 -0.092204   75.0  \n2 -0.002592  0.002861 -0.025930  141.0  \n3  0.034309  0.022688 -0.009362  206.0  \n4 -0.002592 -0.031988 -0.046641  135.0  \n5 -0.076395 -0.041176 -0.096346   97.0  \n6 -0.039493 -0.062917 -0.038357  138.0  \n7  0.017703 -0.035816  0.003064   63.0  \n8 -0.002592 -0.014960  0.011349  110.0  \n9 -0.002592  0.067737 -0.013504  310.0  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>sex</th>\n      <th>bmi</th>\n      <th>bp</th>\n      <th>s1</th>\n      <th>s2</th>\n      <th>s3</th>\n      <th>s4</th>\n      <th>s5</th>\n      <th>s6</th>\n      <th>tmp</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.038076</td>\n      <td>0.050680</td>\n      <td>0.061696</td>\n      <td>0.021872</td>\n      <td>-0.044223</td>\n      <td>-0.034821</td>\n      <td>-0.043401</td>\n      <td>-0.002592</td>\n      <td>0.019907</td>\n      <td>-0.017646</td>\n      <td>151.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-0.001882</td>\n      <td>-0.044642</td>\n      <td>-0.051474</td>\n      <td>-0.026328</td>\n      <td>-0.008449</td>\n      <td>-0.019163</td>\n      <td>0.074412</td>\n      <td>-0.039493</td>\n      <td>-0.068332</td>\n      <td>-0.092204</td>\n      <td>75.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.085299</td>\n      <td>0.050680</td>\n      <td>0.044451</td>\n      <td>-0.005670</td>\n      <td>-0.045599</td>\n      <td>-0.034194</td>\n      <td>-0.032356</td>\n      <td>-0.002592</td>\n      <td>0.002861</td>\n      <td>-0.025930</td>\n      <td>141.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-0.089063</td>\n      <td>-0.044642</td>\n      <td>-0.011595</td>\n      <td>-0.036656</td>\n      <td>0.012191</td>\n      <td>0.024991</td>\n      <td>-0.036038</td>\n      <td>0.034309</td>\n      <td>0.022688</td>\n      <td>-0.009362</td>\n      <td>206.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.005383</td>\n      <td>-0.044642</td>\n      <td>-0.036385</td>\n      <td>0.021872</td>\n      <td>0.003935</td>\n      <td>0.015596</td>\n      <td>0.008142</td>\n      <td>-0.002592</td>\n      <td>-0.031988</td>\n      <td>-0.046641</td>\n      <td>135.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>-0.092695</td>\n      <td>-0.044642</td>\n      <td>-0.040696</td>\n      <td>-0.019442</td>\n      <td>-0.068991</td>\n      <td>-0.079288</td>\n      <td>0.041277</td>\n      <td>-0.076395</td>\n      <td>-0.041176</td>\n      <td>-0.096346</td>\n      <td>97.0</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>-0.045472</td>\n      <td>0.050680</td>\n      <td>-0.047163</td>\n      <td>-0.015999</td>\n      <td>-0.040096</td>\n      <td>-0.024800</td>\n      <td>0.000779</td>\n      <td>-0.039493</td>\n      <td>-0.062917</td>\n      <td>-0.038357</td>\n      <td>138.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>0.063504</td>\n      <td>0.050680</td>\n      <td>-0.001895</td>\n      <td>0.066629</td>\n      <td>0.090620</td>\n      <td>0.108914</td>\n      <td>0.022869</td>\n      <td>0.017703</td>\n      <td>-0.035816</td>\n      <td>0.003064</td>\n      <td>63.0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>0.041708</td>\n      <td>0.050680</td>\n      <td>0.061696</td>\n      <td>-0.040099</td>\n      <td>-0.013953</td>\n      <td>0.006202</td>\n      <td>-0.028674</td>\n      <td>-0.002592</td>\n      <td>-0.014960</td>\n      <td>0.011349</td>\n      <td>110.0</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>-0.070900</td>\n      <td>-0.044642</td>\n      <td>0.039062</td>\n      <td>-0.033213</td>\n      <td>-0.012577</td>\n      <td>-0.034508</td>\n      <td>-0.024993</td>\n      <td>-0.002592</td>\n      <td>0.067737</td>\n      <td>-0.013504</td>\n      <td>310.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 238,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,15 +48,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:14.241734508Z",
-     "start_time": "2023-11-08T17:02:14.110508284Z"
+     "end_time": "2023-11-08T17:37:15.630173344Z",
+     "start_time": "2023-11-08T17:37:15.538475731Z"
     }
    },
    "id": "99411f61bde0f981"
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 268,
    "outputs": [],
    "source": [
     "data.data = preprocessing.scale(data.data)\n",
@@ -68,21 +68,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:14.241883269Z",
-     "start_time": "2023-11-08T17:02:14.110649713Z"
+     "end_time": "2023-11-08T17:37:15.630346341Z",
+     "start_time": "2023-11-08T17:37:15.538628962Z"
     }
    },
    "id": "10760bb1f50bb497"
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 269,
    "outputs": [
     {
      "data": {
       "text/plain": "['age', 'sex', 'bmi', 'bp', 's1', 's2', 's3', 's4', 's5', 's6']"
      },
-     "execution_count": 240,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,15 +93,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:14.242091606Z",
-     "start_time": "2023-11-08T17:02:14.118866612Z"
+     "end_time": "2023-11-08T17:37:15.630581496Z",
+     "start_time": "2023-11-08T17:37:15.538681762Z"
     }
    },
    "id": "c133f6e0fec3ae41"
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 270,
    "outputs": [
     {
      "name": "stdout",
@@ -130,15 +130,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:14.242273054Z",
-     "start_time": "2023-11-08T17:02:14.128627982Z"
+     "end_time": "2023-11-08T17:37:15.630772582Z",
+     "start_time": "2023-11-08T17:37:15.538774791Z"
     }
    },
    "id": "a0e21935bf12d6c5"
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 271,
    "outputs": [
     {
      "data": {
@@ -158,15 +158,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:14.360568439Z",
-     "start_time": "2023-11-08T17:02:14.136984913Z"
+     "end_time": "2023-11-08T17:37:15.774095539Z",
+     "start_time": "2023-11-08T17:37:15.559480704Z"
     }
    },
    "id": "e4e605257d2a6e8e"
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 272,
    "outputs": [
     {
      "name": "stdout",
@@ -177,8 +177,8 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import ElasticNet\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
     "params = {'n_neighbors': np.arange(1, 50)}\n",
     "knn = KNeighborsRegressor()\n",
     "grid = GridSearchCV(knn, params, cv=5)\n",
@@ -196,15 +196,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:14.708831824Z",
-     "start_time": "2023-11-08T17:02:14.318460139Z"
+     "end_time": "2023-11-08T17:37:16.184446275Z",
+     "start_time": "2023-11-08T17:37:15.699754670Z"
     }
    },
    "id": "524170f82ea002d9"
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 273,
    "outputs": [
     {
      "data": {
@@ -242,15 +242,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:15.125046119Z",
-     "start_time": "2023-11-08T17:02:14.715661884Z"
+     "end_time": "2023-11-08T17:37:16.515381754Z",
+     "start_time": "2023-11-08T17:37:16.194328885Z"
     }
    },
    "id": "29b179d84e9c1e18"
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 274,
    "outputs": [
     {
      "name": "stdout",
@@ -280,21 +280,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:15.691318577Z",
-     "start_time": "2023-11-08T17:02:15.113885897Z"
+     "end_time": "2023-11-08T17:37:17.175027640Z",
+     "start_time": "2023-11-08T17:37:16.518851050Z"
     }
    },
    "id": "7a359ae19fc93fe9"
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 275,
    "outputs": [
     {
      "data": {
       "text/plain": "Text(0, 0.5, 'Ошибка')"
      },
-     "execution_count": 246,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -316,15 +316,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:15.886302718Z",
-     "start_time": "2023-11-08T17:02:15.712470994Z"
+     "end_time": "2023-11-08T17:37:17.381361047Z",
+     "start_time": "2023-11-08T17:37:17.191043921Z"
     }
    },
    "id": "9d163262d1320a08"
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 276,
    "outputs": [
     {
      "name": "stdout",
@@ -352,21 +352,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:16.522513561Z",
-     "start_time": "2023-11-08T17:02:15.890644054Z"
+     "end_time": "2023-11-08T17:37:18.060746661Z",
+     "start_time": "2023-11-08T17:37:17.370195871Z"
     }
    },
    "id": "aa62508b816b0447"
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 277,
    "outputs": [
     {
      "data": {
       "text/plain": "Text(0, 0.5, 'Ошибка')"
      },
-     "execution_count": 248,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -388,31 +388,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:16.684043089Z",
-     "start_time": "2023-11-08T17:02:16.519703636Z"
+     "end_time": "2023-11-08T17:37:18.221955690Z",
+     "start_time": "2023-11-08T17:37:18.069182649Z"
     }
    },
    "id": "d179706708363adf"
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
-   "outputs": [],
-   "source": [
-    "from sklearn.datasets import make_classification\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:16.684281737Z",
-     "start_time": "2023-11-08T17:02:16.677128381Z"
-    }
-   },
-   "id": "454c93e7395af792"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 278,
    "outputs": [
     {
      "name": "stdout",
@@ -423,8 +407,7 @@
     }
    ],
    "source": [
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
     "\n",
     "LR_clf = LogisticRegression().fit(X_train, y_train)\n",
     "print('Accuracy of Logistic regression classifier on training set: {:.2f}'\n",
@@ -433,15 +416,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:16.793709233Z",
-     "start_time": "2023-11-08T17:02:16.682798657Z"
+     "end_time": "2023-11-08T17:37:18.440240964Z",
+     "start_time": "2023-11-08T17:37:18.224022782Z"
     }
    },
    "id": "eb84becaae358848"
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 279,
    "outputs": [
     {
      "data": {
@@ -453,7 +436,7 @@
     }
    ],
    "source": [
-    "y_pred_prob = LR_clf.predict_proba(X_train)[:,1]\n",
+    "y_pred_prob = LR_clf.predict_proba(X_train)[:, 1]\n",
     "\n",
     "# Построение гистограммы\n",
     "plt.hist(y_pred_prob, bins=20)\n",
@@ -465,25 +448,62 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:17.001934028Z",
-     "start_time": "2023-11-08T17:02:16.783761456Z"
+     "end_time": "2023-11-08T17:37:18.653134003Z",
+     "start_time": "2023-11-08T17:37:18.445981219Z"
     }
    },
    "id": "65afc5e597602e60"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<h1> \n",
+    "В этом коде выполняется построение и оценка различных моделей машинного обучения для регрессии и классификации на данных о диабете.\n",
+    "\n",
+    "Вначале загружаются данные о диабете из sklearn. Проводится предобработка - масштабирование признаков. Далее данные разбиваются на тренировочную и тестовую выборки.\n",
+    "\n",
+    "Затем последовательно обучаются и оцениваются следующие модели:\n",
+    "\n",
+    "Линейная регрессия (LinearRegression) - для регрессии. Подбираются оптимальные гиперпараметры с помощью GridSearchCV. Вычисляется metrics R2.\n",
+    "K ближайших соседей (KNeighborsRegressor) - для регрессии. Также подбираются гиперпараметры и вычисляется R2. Строятся графики зависимостей.\n",
+    "Ридж регрессия (Ridge) - для регрессии. Подбор гиперпараметра alpha, оценка по R2.\n",
+    "Lasso регрессия (Lasso) - для регрессии. Подбор alpha, оценка по R2.\n",
+    "Логистическая регрессия (LogisticRegression) - для классификации. Оценка по accuracy.\n",
+    "Таким образом, в коде реализовано обучение и оценка как регрессионных, так и классификационных моделей на данных о диабете с использованием различных метрик качества."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cdabb59ea3e0e3ec"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<h1> Старался искуственно не обучать модельки чтоб получить лучший результат. Использовал только нормализацию данных и кросс-валидации для лучших значений. \n",
+    "Lasso - 48%\n",
+    "Linear - 48%\n",
+    "KNeighbors - 49%\n",
+    "Ridge - 49%\n",
+    "Logistic - 44%"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5622ee565658fbf0"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 279,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:02:17.022525689Z",
-     "start_time": "2023-11-08T17:02:17.003624816Z"
+     "end_time": "2023-11-08T17:37:18.660499324Z",
+     "start_time": "2023-11-08T17:37:18.654492905Z"
     }
    },
-   "id": "658ab9722db96c2e"
+   "id": "508fc97efdecd7c4"
   }
  ],
  "metadata": {
