--- a/BigData/lab5/load_diabetes.ipynb
+++ b/BigData/lab5/load_diabetes.ipynb
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 280,
    "outputs": [
     {
      "data": {
       "text/plain": "        age       sex       bmi        bp        s1        s2        s3  \\\n0  0.038076  0.050680  0.061696  0.021872 -0.044223 -0.034821 -0.043401   \n1 -0.001882 -0.044642 -0.051474 -0.026328 -0.008449 -0.019163  0.074412   \n2  0.085299  0.050680  0.044451 -0.005670 -0.045599 -0.034194 -0.032356   \n3 -0.089063 -0.044642 -0.011595 -0.036656  0.012191  0.024991 -0.036038   \n4  0.005383 -0.044642 -0.036385  0.021872  0.003935  0.015596  0.008142   \n5 -0.092695 -0.044642 -0.040696 -0.019442 -0.068991 -0.079288  0.041277   \n6 -0.045472  0.050680 -0.047163 -0.015999 -0.040096 -0.024800  0.000779   \n7  0.063504  0.050680 -0.001895  0.066629  0.090620  0.108914  0.022869   \n8  0.041708  0.050680  0.061696 -0.040099 -0.013953  0.006202 -0.028674   \n9 -0.070900 -0.044642  0.039062 -0.033213 -0.012577 -0.034508 -0.024993   \n\n         s4        s5        s6    tmp  \n0 -0.002592  0.019907 -0.017646  151.0  \n1 -0.039493 -0.068332 -0.092204   75.0  \n2 -0.002592  0.002861 -0.025930  141.0  \n3  0.034309  0.022688 -0.009362  206.0  \n4 -0.002592 -0.031988 -0.046641  135.0  \n5 -0.076395 -0.041176 -0.096346   97.0  \n6 -0.039493 -0.062917 -0.038357  138.0  \n7  0.017703 -0.035816  0.003064   63.0  \n8 -0.002592 -0.014960  0.011349  110.0  \n9 -0.002592  0.067737 -0.013504  310.0  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>sex</th>\n      <th>bmi</th>\n      <th>bp</th>\n      <th>s1</th>\n      <th>s2</th>\n      <th>s3</th>\n      <th>s4</th>\n      <th>s5</th>\n      <th>s6</th>\n      <th>tmp</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.038076</td>\n      <td>0.050680</td>\n      <td>0.061696</td>\n      <td>0.021872</td>\n      <td>-0.044223</td>\n      <td>-0.034821</td>\n      <td>-0.043401</td>\n      <td>-0.002592</td>\n      <td>0.019907</td>\n      <td>-0.017646</td>\n      <td>151.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-0.001882</td>\n      <td>-0.044642</td>\n      <td>-0.051474</td>\n      <td>-0.026328</td>\n      <td>-0.008449</td>\n      <td>-0.019163</td>\n      <td>0.074412</td>\n      <td>-0.039493</td>\n      <td>-0.068332</td>\n      <td>-0.092204</td>\n      <td>75.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.085299</td>\n      <td>0.050680</td>\n      <td>0.044451</td>\n      <td>-0.005670</td>\n      <td>-0.045599</td>\n      <td>-0.034194</td>\n      <td>-0.032356</td>\n      <td>-0.002592</td>\n      <td>0.002861</td>\n      <td>-0.025930</td>\n      <td>141.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-0.089063</td>\n      <td>-0.044642</td>\n      <td>-0.011595</td>\n      <td>-0.036656</td>\n      <td>0.012191</td>\n      <td>0.024991</td>\n      <td>-0.036038</td>\n      <td>0.034309</td>\n      <td>0.022688</td>\n      <td>-0.009362</td>\n      <td>206.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.005383</td>\n      <td>-0.044642</td>\n      <td>-0.036385</td>\n      <td>0.021872</td>\n      <td>0.003935</td>\n      <td>0.015596</td>\n      <td>0.008142</td>\n      <td>-0.002592</td>\n      <td>-0.031988</td>\n      <td>-0.046641</td>\n      <td>135.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>-0.092695</td>\n      <td>-0.044642</td>\n      <td>-0.040696</td>\n      <td>-0.019442</td>\n      <td>-0.068991</td>\n      <td>-0.079288</td>\n      <td>0.041277</td>\n      <td>-0.076395</td>\n      <td>-0.041176</td>\n      <td>-0.096346</td>\n      <td>97.0</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>-0.045472</td>\n      <td>0.050680</td>\n      <td>-0.047163</td>\n      <td>-0.015999</td>\n      <td>-0.040096</td>\n      <td>-0.024800</td>\n      <td>0.000779</td>\n      <td>-0.039493</td>\n      <td>-0.062917</td>\n      <td>-0.038357</td>\n      <td>138.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>0.063504</td>\n      <td>0.050680</td>\n      <td>-0.001895</td>\n      <td>0.066629</td>\n      <td>0.090620</td>\n      <td>0.108914</td>\n      <td>0.022869</td>\n      <td>0.017703</td>\n      <td>-0.035816</td>\n      <td>0.003064</td>\n      <td>63.0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>0.041708</td>\n      <td>0.050680</td>\n      <td>0.061696</td>\n      <td>-0.040099</td>\n      <td>-0.013953</td>\n      <td>0.006202</td>\n      <td>-0.028674</td>\n      <td>-0.002592</td>\n      <td>-0.014960</td>\n      <td>0.011349</td>\n      <td>110.0</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>-0.070900</td>\n      <td>-0.044642</td>\n      <td>0.039062</td>\n      <td>-0.033213</td>\n      <td>-0.012577</td>\n      <td>-0.034508</td>\n      <td>-0.024993</td>\n      <td>-0.002592</td>\n      <td>0.067737</td>\n      <td>-0.013504</td>\n      <td>310.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 267,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-08T17:37:15.630173344Z",
-     "start_time": "2023-11-08T17:37:15.538475731Z"
+     "end_time": "2023-11-08T17:51:40.676135032Z",
+     "start_time": "2023-11-08T17:51:40.584733861Z"
     }
    },
    "id": "99411f61bde0f981"
@@ -407,8 +407,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "LR_clf = LogisticRegression().fit(X_train, y_train)\n",
     "print('Accuracy of Logistic regression classifier on training set: {:.2f}'\n",
     "      .format(LR_clf.score(X_train, y_train)))"
@@ -490,6 +488,14 @@
     "collapsed": false
    },
    "id": "5622ee565658fbf0"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "47b2a62d1c641029"
   },
   {
    "cell_type": "code",
